src/test/resources/Parser/SyntaxErrors/AccessForbiddenClass.front
include AccessForbiddenClass2.front;

class A:
    static i: int32 = B.i;
